# midnight_museum

./: .gitignore  LICENSE  README.md  com.eppx.midnight.daemon.plist  effect_base.py  effect_diagonal_hue.py  effect_image_scan.py  effect_lighthouse.py  effect_party.py  effect_ripple.py  effect_test_pattern.py  effects.py  kauf.py  lights.py  main.py  mqtt.py  museum  pyproject.toml  setup.py  test_esphome.py  web_server.py
templates/: base.html  devices.html  index.html  lanterns.html  live_state.html  mqtt_setting.html
